[package]
name = "libfyaml-sys"
version = "0.2.7+fy0.9.3"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["api-bindings", "encoding", "parser-implementations"]
description = "Rust binding for libfyaml"
documentation = "https://docs.rs/libfyaml-sys"
edition = "2021"
keywords = ["yaml"]
license = "MIT"
links = "libfyaml"
repository = "https://github.com/dtolnay/libfyaml-rs"
rust-version = "1.63"

[dependencies]
libc = "0.2"

[build-dependencies]
git2 = "0.18.1"
bindgen = "0.69"
semver = "1.0.21"
cc = "1"
regex = "1.10.3"

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-musl"]
rustdoc-args = ["--generate-link-to-definition"]
